# yt-music-bot

./: .gitignore  Cargo.toml  Cross.toml  cross.aarch64.dockerfile  cross.x86_64.dockerfile  docker-compose.yml  justfile  pyproject.toml
.cargo/: config.toml
src/: bot.rs  cli.rs  controller.rs  main.rs  player.rs  run.rs  server.rs  track_manager.rs  util.rs  youtube.rs
src/py/: youtube.py
src/telegram/: bot.rs  defs.rs  dispatch.rs  display.rs  mod.rs  state.rs
src/util/: cancel.rs  channel.rs  mod.rs  parse.rs  temp_dir.rs
src/youtube_dl/: server.py
