[package]
name = "yt-music-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-stream = "0.3.5"
atomic-counter = "1.0.1"
camino = "1.1.6"
clap = { version = "4.4.8", features = ["cargo", "env", "derive", "string"] }
dashmap = "5.5.3"
dotenvy = "0.15.7"
dptree = "0.3.0"
futures = "0.3.29"
itertools = "0.12.0"
lru-cache = "0.1.2"
mimalloc = "0.1.39"
num_cpus = "1.16.0"
once_cell = { version = "1.18.0", features = ["parking_lot"] }
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version = "0.21.2", features = [
  "rt-tokio-current-thread",
  "trace",
] }
pin-project = "1.1.3"
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
rand = "0.8.5"
regex = "1.10.2"
rodio = { version = "0.17.3", features = ["symphonia-aac", "symphonia-isomp4"] }
rust-embed = { version = "8.0.0", features = [
  "include-exclude",
  "interpolate-folder-path",
] }
serde = { version = "1.0.193", features = ["derive"] }
shell-words = "1.1.0"
teloxide = { version = "0.12.2", default-features = false, features = [
  "macros",
  "rustls",
  "throttle",
] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = [
  "tracing",
  "sync",
  "rt-multi-thread",
  "io-util",
  "net",
  "fs",
  "signal",
] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = { version = "0.7.10", features = ["tracing"] }
tracing = { version = "0.1.40", features = ["log", "valuable", "async-await"] }
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = [
  "valuable",
  "parking_lot",
  "tracing",
  "json",
] }
url = { version = "2.4.1", features = ["serde"] }
